--- a/Cool Penguin Extention/manifest.json
+++ b/Cool Penguin Extention/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "PenguinFace",
+  "name": "PenguinGPT",
   "description": "An extension that integrates Hugging Face API with PenguinMod",
   "version": "1.0.0",
-  "author": "ChatGPT",
+  "author": "Your Name",
   "main": "index.js",
   "icon": "path/to/your/icon.png",
   "target": "penguinmod"
